# trophy-be

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  captain-definition  docker-compose.yml  example.env
.githooks/: pre-commit
.sqlx/: query-012a6e5296ffcf04703318efd8a865f9cb35e09d77711940233357f55166ade4.json  query-02416fdbba2c2c0827dad8d1474991643d650998a9f432a79e87369d01fcb9c3.json  query-02fe98ec92b23d917fd6d35963b00e3fd4e26ccc02aab39240d321a6f2e61e5f.json  query-03e9e727f92bc026ff1eb4e1fefe1813e8886377a58fd01e9d6d11cdf67b30cc.json  query-06596b5fbc7a0f5bd9af3d98a4145a26db977331223122a4b47d3060efc6392d.json  query-0f6528ef6e25214d9559c66e4e32da32456c88c4d8cc6471ce3beec1a11d621f.json  query-12ca6e17d36b91bc515d6dadd500518f601987e8b23f882ae75e785c91d0e51b.json  query-146260c5bcf92e0de35640c79c24e339450164fd7e53454480baed2bf616f620.json  query-23c6c763863d602bb262989c8e45a3d3f6e174af2a5597165f6df0441a0fd9e1.json  query-35fc1e0c01e93dcce2033d1cbae718913ed50b60ca7432abfb02a8494741067a.json  query-36049c04d327417c49da3faff773e70b745fa2dada88d6022a03c697848f921a.json  query-3e284f1965cf4d528dc0206b1177b47ebb68cc0580d2e2d500765d4c2c570b10.json  query-416b9322d1a854f4ab6b3d0a752de73f68985592ba7a91e4bf19048389b5d7bc.json  query-494d39cb68ce8db7d655b67aacff3507b2168d4862ab3112fcb7195d5cf7c421.json  query-4a841140c5fc3f815d08e689c6f32b7e63e8ab59bc1fdb2bfc87c42a87dbc85f.json  query-57bb6c2ef3ade00ac0fa3af0488ad13aa8535a7a21a6f487833617ce837173b3.json  query-586d89d82f4ab3246df7e4f488deb7bea512bf0440b86e6ff352e38b74d94dd8.json  query-662fb7ed4aa9e6cbd767c2168f8bc960e9ab9b2dcbb88f54eff9295078093c1b.json  query-6cc0161d34683dbeafba6ce3c625bd61daa87b3c81ff9b6696a4b8ea75941710.json  query-6de9918c270b9c1ec61bdfa18a80c79c06cc8e2d18e44399eafae14e2d0dd577.json  query-79a40a34fbdf268215b1947f57f4e32ea6861ed772f1ef9119652c39725e940d.json  query-839d6c3326694f0916aa4a10692e877749e7dbee786251014aefd0d3f6a55158.json  query-8489de83b39fd839b4353a6006e50fa1b3cf3331a53af02736982f9d8491a0f3.json  (+23 more)
be/: .env-example  Cargo.toml  Dockerfile  TODO  sqlx-data.json
be/.sqlx/: query-0199931c6af810ed42ff5b3a62345876c1b6ad124bf54a8466b41c9e8adebce1.json  query-045d5233bb1c9b782033ce2169298e94722cff9050830fbea9135035c0e9804e.json  query-06596b5fbc7a0f5bd9af3d98a4145a26db977331223122a4b47d3060efc6392d.json  query-07e658c2bf552b5bb7a946b8f80eb1e6389f53b165387afec27fbe4b38e7f5e0.json  query-0b7fe502e679bb0c7f61da9914d3b9e56b1385c962f8e6e69605518a5ae77821.json  query-0b9fa2487d973b3eb83f4a0407a505d3531409afde0f8eec4483db7acabc7ea1.json  query-0c0abd271459fe428a6bccdd27caa2406955dc503b485587a3d9cc866ee8c712.json  query-0e8cba4dfe0fb36214d851334d076619ef3467973c1483410714d8196da0f34b.json  query-124be758e34790f1a41a10d504bed53d08dc65de32af6a0cb92b092de2774902.json  query-128fbde527de880673ee7dfee6ace8122da63c4302085fa16cdfb2e30a7ab795.json  query-1fdaf2e095a08ac02e783ab0d35bf98c70053b9ff999e4358a4d31ed37c0ce0b.json  query-23c6c763863d602bb262989c8e45a3d3f6e174af2a5597165f6df0441a0fd9e1.json  query-244d88177c9e7bc7cbf930e3c72d36a87f1e9a5e4b0aab13cc16ed7d51148ccb.json  query-25ba99f1c696a7324fd715a0428b04ac32263562dc4216b6216a16737c43b6d4.json  query-315e2dd82983da44c713279afb8d1b72cdfb1288e07feb774747544352d61fbe.json  query-34eedb6b9b221c4b310dbe17868b64960396a304ff2e4f7e92a3acfc065970ff.json  query-3a373c55c54c0cb9b58df1f45149159ad40829cb9bbf19a53cb45ff4e7d0af2e.json  query-3bb495934a249f6c544e5850ae26224dd17f0e6dc41abd5035f00b07630e5175.json  query-3de0cb799bbde87f5069c5348ef088b82b4eafd094df072f8b5198d33808e41f.json  query-403e2bd98c11d3eff4378bb3fa521c32b5de8d28854afcdb21203e46d36f29ff.json  query-416237fd57162bb67fcbed186ea86ca3cd86afef5a20eaabca62d8f8fd7376a9.json  query-43db4cfa12738b921aded84295eaa7bdc81ab5ecac256bbf6f84e58af6077456.json  query-4557f8a5cd5a7b7d72ad498133a7028188ceb6bfacb0d2c363c3d679660afc29.json  query-479892c0104b715ba6e4a6253b6836c2da1899198523078179b5b4476cf5d5fd.json  query-4ef46ca5824a2270433d15565e63c072c58a19f6703f128b7bd7bb3078b0362e.json  query-51214b5cc4f88d2a269ee788fcbd93c123b2d62990088edac045994d77c1ba0c.json  query-53b14ecf631c07918524d3db80ff1b608ab509450cecaf2dc3f1ed8552c6d437.json  query-57bb6c2ef3ade00ac0fa3af0488ad13aa8535a7a21a6f487833617ce837173b3.json  query-5872453640eb0eb9315463b06bed78d00092012b5505c094450f6b2440768239.json  query-5f6b3740d4be23671f3031b9f88e6e6edec87aaca093b173316453ce1becbe69.json  query-604e651157a98808dfd4eb2d7f356a3bd6e185604f0cb327247afe1e05dbe572.json  query-608ccf7cd04a9d496a8fa77726cd18691d68834e6a053c15bffc73645b01992d.json  query-6163964d101446ba8ed0b5299bf74aac7fdfe1fc8b4fa89d7505c65e4e54d873.json  query-621aa9cd0ca71231f2f29a519be65f48f2aa0fadd66446ff5fccfe4451f2a014.json  query-68188c8d58f4ec6788498a862ad3a09e7b771a4e37e04a1c00d702ba3e08409a.json  query-6cc0161d34683dbeafba6ce3c625bd61daa87b3c81ff9b6696a4b8ea75941710.json  query-6d027e11b63dcefee83c451cb52b1c656269133c9c20b130aa7dfde51d227e38.json  query-6d44f09e063d862cabbdc32c73a2f4c6275a3c4405b5e2dc4671f3b97b267927.json  query-6dbcfc7eb5f77f6826fb434896a6534cdb79d2121d5c8f13145c842af4973e81.json  query-6f13f583d14c6f7b9c4e1f591b77501b96ae3175c6e1547c1a8f1c2bf6c73a10.json  (+40 more)
be/src/: eval.rs  main.rs
be/src/middleware/: auth.rs  log.rs  mod.rs
be/src/model/: error.rs  game.rs  history.rs  logger.rs  misc.rs  mod.rs  outcome.rs  parsed_outcome.rs  team.rs  user.rs  user_token.rs
be/src/routes/: eval.rs  game.rs  history.rs  import.rs  logger.rs  misc.rs  mod.rs  outcome.rs  team.rs  user.rs
be/src/ws/: lobby.rs  messages.rs  mod.rs  route.rs  socket_refresh.rs  ws.rs
db/: db.md  (+4 more)
trophy-bak/: Cargo.toml  optic.yml  start.sql
trophy-bak/.optic/api/: specification.json
trophy-bak/src/: eval.rs  main.rs  model.rs  routes.rs
trophy-bak/src/model/: error.rs  game.rs  mod.rs  mod_game.rs  mod_outcome.rs  mod_team.rs  outcome.rs  parsedOutcome.rs  parsed_outcome.rs  team.rs  user.rs  user_token.rs
trophy-bak/src/routes/: eval.rs  eval_routes.rs  game.rs  game_routes.rs  misc.rs  misc_routes.rs  mod.rs  outcome_routes.rs  team.rs  team_routes.rs  user.rs
(+50 files in other folders)
