[package]
name = "trophy-be"
version = "1.1.0"
authors = ["vaerl <me@lukas.run>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basics
dotenv = "0.15.0"
futures = "0.3.31"
humantime = "2.2.0"
xlsxwriter = "0.6.1"
thiserror = "2.0.12"
# logging
env_logger = "0.11.8"
log = "0.4.27"
# runtime
tokio = { version = "1.45.1", features = ["full"] }
# database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
] }
# http/rest
actix = "0.13.5"
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-service = "2.0.3"
actix-cors = "0.7.1"
serde = "1.0.219"
serde_json = "1.0.140"
# auth
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
# NOTE 0.6.4 is required by several dependencies
rand_core = { version = "0.6.4", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
actix-multipart = "0.7.2"
calamine = "0.27.0"

# necessary because the calamine-patch breaks things
flate2 = "1.1.1"

# necessary because calamine requires zip 2.5
[patch.crates-io]
calamine = { git = "https://github.com/prophittcorey/calamine", branch = "fix/zip-3.0" }
