[package]
name = "trophy-be"
version = "1.1.0"
authors = ["vaerl <me@lukas.run>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basics
dotenv = "0.15.0"
futures = "0.3.31"
humantime = "2.3.0"
xlsxwriter = "0.6.1"
thiserror = "2.0.18"
# logging
env_logger = "0.11.8"
log = "0.4.29"
# runtime
tokio = { version = "1.49.0", features = ["full"] }
# database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
] }
# http/rest
actix = "0.13.5"
actix-web = "4.12.1"
actix-files = "0.6.10"
actix-service = "2.0.3"
actix-cors = "0.7.1"
serde = "1.0.228"
serde_json = "1.0.149"
# auth
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
argon2 = "0.5.3"
# TODO v0.6.4 is required by sqlx, actix-multipart, argon2 -> more here: https://github.com/launchbadge/sqlx/pull/3946
# -> the link above also includes an example for generating salt-strings without depending on a specific version of rand_core
rand_core = { version = "0.6.4", features = ["std"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
actix-multipart = "0.7.2"
calamine = "0.33.0"
