[package]
name = "trophy-be"
version = "1.1.0"
authors = ["vaerl <me@lukas.run>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basics
dotenv = "0.15.0"
futures = "0.3.31"
humantime = "2.1.0"
xlsxwriter = "0.6.1"
thiserror = "2.0.11"
# logging
env_logger = "0.11.6"
log = "0.4.26"
# runtime
tokio = { version = "1.43.0", features = ["full"] }
# database
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
] }
# http/rest
actix = "0.13.5"
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-service = "2.0.2"
actix-cors = "0.7.0"
serde = "1.0.218"
serde_json = "1.0.139"
# auth
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
# NOTE 0.6.4 is required by actix
rand_core = { version = "0.6.4", features = ["std"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.14.0", features = ["v4", "serde"] }
actix-multipart = "0.7.2"
calamine = "0.26.1"
