[package]
name = "klostertrophy-backend"
version = "0.1.0"
authors = ["vaerl <lukas@mlel.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basics
anyhow = "1.0"
dotenv = "0.15.0"
futures = "0.3"
# logging
env_logger = "0.8.2"
log = "0.4"
# serde
serde = "1.0.106"
serde_json = "1.0.51"
# runtime
tokio = { version = "0.3.6", features = ["full"] }
# database
sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "postgres" ] }
# http
actix-web = "3"