[package]
name = "klostertrophy-backend"
version = "0.1.0"
authors = ["vaerl <lukas@mlel.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basics
anyhow = "1.0"
dotenv = "0.15.0"
futures = "0.3"
humantime = "2.1.0"
xlsxwriter = "0.3"
# logging
env_logger = "0.8.2"
log = "0.4"
# serde
serde = "1.0"
serde_json = "1.0"
# runtime
# NOTE upgrading to Tokio 1.2 is dependant on actix-4
tokio = { version = "0.3.6", features = ["full"] }
# database
# NOTE upgrading to sqlx-0.5 introduces some changes, check cargo-output
sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "postgres" ] }
# http
actix-web = "3"
actix-files = "0.5"
# auth
jsonwebtoken = "7.2.0"
argon2 = "0.1"
rand_core = { version = "0.6", features = ["std"] }